--- a/site/index.html
+++ b/site/index.html
@@ -38,4 +38,208 @@
     <section class="hero">
       <div class="container hero__grid">
         <div class="hero__content">
-          <p
+          <p class="badge">초보 환영 · 재료 공유 · 소모임</p>
+          <h1 class="hero__title">
+            함께 뜨고, 함께 웃는<br />
+            <span class="hero__titleAccent">뜨개동아리</span>
+          </h1>
+          <p class="hero__desc">
+            첫 코부터 완성까지. 정기모임/번개모임/작품 전시를 함께해요.
+          </p>
+
+          <div class="hero__actions">
+            <a class="btn btn--primary" href="#schedule">이번 달 일정 보기</a>
+            <a class="btn btn--ghost" href="#gallery">작품 둘러보기</a>
+          </div>
+
+          <ul class="hero__stats" aria-label="동아리 요약">
+            <li class="stat">
+              <strong class="stat__num">매주</strong>
+              <span class="stat__label">정기모임</span>
+            </li>
+            <li class="stat">
+              <strong class="stat__num">초보</strong>
+              <span class="stat__label">환영</span>
+            </li>
+            <li class="stat">
+              <strong class="stat__num">작품</strong>
+              <span class="stat__label">전시/기록</span>
+            </li>
+          </ul>
+        </div>
+
+        <!-- 대표 이미지 -->
+        <div class="hero__card" aria-label="대표 이미지 영역">
+          <img
+            src="./images/photo_Cat.jpg"
+            alt="뜨개 작품 사진"
+            class="hero__image"
+            loading="lazy"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- 소개 -->
+    <section id="about" class="section">
+      <div class="container">
+        <div class="section__head">
+          <h2 class="section__title">동아리 소개</h2>
+          <p class="section__desc">
+            뜨개를 좋아하는 사람들이 모여 서로 배우고, 작품을 남기고, 함께 전시도 해요.
+          </p>
+        </div>
+
+        <div class="cards">
+          <article class="card">
+            <h3 class="card__title">초보자 케어</h3>
+            <p class="card__desc">기초 코잡기부터 패턴 읽기까지 천천히 도와드려요.</p>
+          </article>
+          <article class="card">
+            <h3 class="card__title">함께 만드는 작품</h3>
+            <p class="card__desc">계절 소품/목도리/가방 등 월간 미션을 진행해요.</p>
+          </article>
+          <article class="card">
+            <h3 class="card__title">기록 & 공유</h3>
+            <p class="card__desc">완성작 갤러리와 모임 사진을 남겨 추억을 쌓아요.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- 일정 -->
+    <section id="schedule" class="section section--alt">
+      <div class="container">
+        <div class="section__head">
+          <h2 class="section__title">모임 일정</h2>
+          <p class="section__desc">정기모임 + 번개모임을 업데이트해요.</p>
+        </div>
+
+        <div class="table">
+          <div class="table__row table__row--head">
+            <div>날짜</div>
+            <div>시간</div>
+            <div>장소</div>
+            <div>내용</div>
+          </div>
+
+          <!-- 예시 일정(필요한 만큼 복사) -->
+          <div class="table__row">
+            <div>1/11(토)</div>
+            <div>14:00</div>
+            <div>커뮤니티룸</div>
+            <div>초보 코잡기 + 실/바늘 소개</div>
+          </div>
+          <div class="table__row">
+            <div>1/25(토)</div>
+            <div>14:00</div>
+            <div>카페 모임</div>
+            <div>월간 미션 진행 + Q&A</div>
+          </div>
+        </div>
+
+        <p class="hint">* 일정은 상황에 따라 변경될 수 있어요.</p>
+      </div>
+    </section>
+
+    <!-- 갤러리 -->
+    <section id="gallery" class="section">
+      <div class="container">
+        <div class="section__head">
+          <h2 class="section__title">작품 갤러리</h2>
+          <p class="section__desc">회원들의 완성작을 모아두는 공간이에요.</p>
+        </div>
+
+        <div class="gallery">
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Cat.jpg" alt="작품 사진 - 고양이" loading="lazy" />
+            <figcaption class="gallery__cap">고양이 인형</figcaption>
+          </figure>
+
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Flower.jpg" alt="작품 사진 - 꽃" loading="lazy" />
+            <figcaption class="gallery__cap">꽃 작품</figcaption>
+          </figure>
+
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Flower2.jpg" alt="작품 사진 - 꽃 2" loading="lazy" />
+            <figcaption class="gallery__cap">꽃 작품 2</figcaption>
+          </figure>
+
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Flower3.jpg" alt="작품 사진 - 꽃 3" loading="lazy" />
+            <figcaption class="gallery__cap">꽃 작품 3</figcaption>
+          </figure>
+
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Hat.jpg" alt="작품 사진 - 모자" loading="lazy" />
+            <figcaption class="gallery__cap">모자</figcaption>
+          </figure>
+
+          <figure class="gallery__item">
+            <img class="gallery__img" src="./images/photo_Tiger.jpg" alt="작품 사진 - 호랑이" loading="lazy" />
+            <figcaption class="gallery__cap">호랑이</figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <!-- 가입 -->
+    <section id="join" class="section section--alt">
+      <div class="container">
+        <div class="join">
+          <div class="join__text">
+            <h2 class="section__title">가입 / 문의</h2>
+            <p class="section__desc">
+              참여 희망하시면 아래 연락처로 문의해주세요. (카톡 오픈채팅/인스타/메일 등)
+            </p>
+
+            <ul class="list">
+              <li><strong>모임 빈도:</strong> 매주 1회</li>
+              <li><strong>준비물:</strong> 실/바늘 (처음은 대여 가능)</li>
+              <li><strong>회비:</strong> 0원 ~ 소액(장소대)</li>
+            </ul>
+          </div>
+
+          <form class="form" action="#" method="post">
+            <label class="field">
+              <span class="field__label">이름</span>
+              <input class="field__input" type="text" name="name" placeholder="홍길동" />
+            </label>
+
+            <label class="field">
+              <span class="field__label">연락처</span>
+              <input class="field__input" type="text" name="contact" placeholder="010-0000-0000" />
+            </label>
+
+            <label class="field">
+              <span class="field__label">메시지</span>
+              <textarea class="field__input field__textarea" name="message" placeholder="간단한 자기소개/참여 목적"></textarea>
+            </label>
+
+            <button class="btn btn--primary" type="button">
+              제출(데모)
+            </button>
+            <p class="hint">* 지금은 데모 폼이라 전송은 안 됩니다. Netlify Forms로 쉽게 연결 가능.</p>
+          </form>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- 푸터 -->
+  <footer class="footer">
+    <div class="container footer__inner">
+      <p class="footer__copy">© <span id="year"></span> 뜨개동아리. All rights reserved.</p>
+      <div class="footer__links">
+        <a href="#home">맨 위로</a>
+        <a href="#join">문의</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
